docs(gc): record netty as a real caller of the fixed path, and what is still unmeasured
Two additions to the eighth pass.

`Unsafe.reallocateMemory` is not theoretical here.
`io.netty.util.internal.PlatformDependent0:727` -- `reallocateDirectNoCleaner`,
behind `UnpooledUnsafeNoCleanerDirectByteBuf.capacity(int)` -- calls it and uses
the RETURNED address, which is the contract and is why the relocation is safe
for it. Before the fix, growing such a buffer kept the same handle and left the
block covering every `Unsafe` allocation made after it, so any later off-heap
allocation in the process was silently aliased into netty's grown buffer.

The same section records why the §1 bound cannot fire spuriously: the JDK's
`DirectByteBuffer(int cap)` allocates `max(1, cap + (pageAligned ? ps : 0))` and
publishes `base` (or `base + padding`), so the bytes remaining from the
published address are always `>= capacity`, and a slice carries a smaller
capacity at a higher offset. `short_translations=0` on a healthy workload is the
expected reading, not a suspicious one.

And what has NOT been re-measured, stated rather than left implied: the
38-rep `ResourceLeakDetectorTest` arm. Both obstacles are recorded because both
are traps -- the netty `target/test-classes` had been cleaned when `/data`
filled, so a first 38-rep arm ran `rc=0 found=0` and read exactly like a clean
one; and the shared host SIGKILLed the fat-LTO link twice. Neither is
load-bearing for the retirement: the crash was closed by bisect on 2026-08-19
and none of this work touches the collector.

Also records the shared-output-directory race in `regression-suite` that
produced a 78/80 and a spurious `RReflect` failure in this session, both of
which went to 80/80 when re-run alone.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>